# bioinformatics-fundamental

./: README.md
codon-bias-analyzer/: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
codon-bias-analyzer/docs/: final_report.md
codon-bias-analyzer/results/: codon_usage_20260306_210230.csv  codon_usage_20260306_210230.json  report_20260306_210230.tex
codon-bias-analyzer/src/: analyzer.py  config.py  downloader.py  main.py  models.py  pipeline.py  reporter.py  view.py  visualizer.py
dna-mutation-simulator/: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
dna-mutation-simulator/results/: meselson_stahl_20260306_211135.json  msi_analysis_20260306_211135.json  repair_results_20260306_211135.json
dna-mutation-simulator/src/: analyser.py  config.py  downloader.py  main.py  model.py  pipeline.py  printer.py  reporter.py  view.py
mobile-elements-detector/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
mobile-elements-detector/docs/: final_report.md
mobile-elements-detector/src/: __init__.py  analyzer.py  config.py  downloader.py  main.py  models.py  printer.py  reporter.py  view.py
protein-rna-viewer/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
splicing-pattern-analyzer/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
splicing-pattern-analyzer/docs/: final_report.md
splicing-pattern-analyzer/src/: __init__.py  analyzer.py  config.py  downloader.py  exceptions.py  main.py  models.py  reporter.py  view.py  visualizer.py
(+14 files in other folders)
